fixed too light color

--- a/Zune.theme.css
+++ b/Zune.theme.css
@@ -19,7 +19,7 @@
 
 
 .theme-dark{
-    --background-primary: #3a3838;
+    --background-primary: #2e2d2d;
     --background-secondary: #272626;
     --background-secondary-alt: #272626;
     --background-secondary-alt-alt: #272626;
